--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,11 @@
         android:id="@+id/imageView"
         android:layout_width="413dp"
         android:layout_height="437dp"
-        tools:layout_editor_absoluteX="-2dp" />
+        android:layout_marginBottom="185dp"
+        app:layout_constraintBottom_toTopOf="@+id/start_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/timer"
